src/test/ui/borrowck/borrowck-borrowed-uniq-rvalue-2.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/borrowck-borrowed-uniq-rvalue-2.rs:20:20
   |
LL |     let x = defer(&vec!["Goodbye", "world!"]);
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^ - temporary value is freed at the end of this statement
   |                    |
   |                    creates a temporary which is freed while still in use
LL |     x.x[0];
   |     ------ borrow later used here
   |
   = note: consider using a `let` binding to create a longer lived value
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
